Fix AddPost input overflowing

--- a/web/src/components/AddPost/AddPost.module.scss
+++ b/web/src/components/AddPost/AddPost.module.scss
@@ -15,6 +15,7 @@
   font-size: 14px;
   margin: 10px 0 10px 10px;
   flex: 1;
+  word-break: break-word;
 
   &:focus {
     outline: none;
